redis-dev/debug-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-debug-nodeport
  namespace: redis-dev
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis-dev
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis-dev
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: redis
      nodePort: 30379
