redis-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis-dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis-dev
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis-dev
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis-dev
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: redis
